--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,7 +3,7 @@
 footer {
     min-height: 2rem;
     background-color: colors.$color-footer;
-    position: absolute;
+    //position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
