added header component changes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="d-flex justify-content-between p-1">
     <img src="../../../assets/images/hashedin-logo.png" routerLink="/allcourses" class="" id="logo" alt="hasedin by deloitte logo">
     <div class="float-right mr-1">
-        <a routerLinkActive="active-header" routerLink="/allcourses" class="">COURSES</a>
+        <a routerLinkActive="active-header" routerLink="/allcourses" class="">COURSES afjaoefi</a>
         <a routerLinkActive="active-header" routerLink="/wishlist" class="ml-4">MY WISH LIST</a>
         <a  routerLink="/cart" ><img src="../../../assets/images/shopping-cart.svg"   alt="shopping cart"></a>
         <a  routerLink="/profile"><img src="../../../assets/images/profile-icon.svg" alt="profile"></a>
